fixed layout on smaller screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,6 @@
   body {
     overflow-x: hidden;
     font-weight: 400;
-    min-height: 100vh;
     line-height: 1;
   }
 }
